--- a/_scss/_pages.scss
+++ b/_scss/_pages.scss
@@ -1,6 +1,4 @@
 main {
-  padding-top: map-get($spacers, 4);
-
   /*-- Post page --*/
   .post {
     line-height: 1.7;
